--- a/css/style.css
+++ b/css/style.css
@@ -474,8 +474,8 @@ body {
     justify-content: center;
   }
   .mobile .tablet .warning .whatsapp-icon img {
-    width: 50px;
-    height: 43px;
+    width: 6.26vw;
+    height: 5.38vw;
   }
   .mobile .tablet .warning .whatsapp-icon .message {
     background-image: url(../img/layer-black.webp);
@@ -497,7 +497,7 @@ body {
     text-shadow: -2px -2px 2px #15202f, 2px -2px 2px #15202f, -2px 2px 2px #15202f, 2px 2px 2px #15202f;
   }
   .mobile .tablet .warning .form {
-    margin-top: 15px;
+    margin-top: 1.88vw;
     margin-left: -6px;
   }
   .mobile .tablet .warning .form form input[type=number]::-webkit-inner-spin-button {
@@ -520,6 +520,12 @@ body {
     padding-left: 20px;
     color: #7f7f99;
   }
+  .mobile .tablet .warning .form form input::-moz-placeholder {
+    font-size: 2vw;
+  }
+  .mobile .tablet .warning .form form input::placeholder {
+    font-size: 2vw;
+  }
   .mobile .tablet .warning .form form button {
     background: none;
     border: none;
@@ -530,7 +536,7 @@ body {
     width: 30.162vw;
     height: 6.382vw;
     color: #004c61;
-    font-size: 1.8rem;
+    font-size: 2.252vw;
     font-weight: normal;
     text-shadow: -2px -2px 2px #00fffc, 2px -2px 1px #00fffc, -2px 2px 1px #00fffc, 2px 2px 1px #00fffc;
     transition: 300ms;
