--- a/css/style.scss
+++ b/css/style.scss
@@ -470,6 +470,8 @@ body {
   .mobile {
     display: block;
 
+    transform: scale(1.1);
+
     header {
       width: 90vw;
       height: 28.1vw;
